Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25877

"Expand all" button of test result not showing everything when filters are active

XMLWordPrintable

    • All
    • 085e5ebe321d106932429f2b2f45ee995050e04e (qt-creator/qt-creator/master)

      How to reproduce :

      Open Qt exemple "Test - Chapter 1"

      Make the test fail (QFAIL("Error Message") )

      On the testResult tab of QtCreator, go to filter test Result and unselect "Pass"

      Click the "Expand All" button before running the test

      Run the test

      Result : One line showing "Fail - Executing test case TestQString"

      Expected result : One collapsible line showing "Fail..." with one child indicating "Fail - Executing test case toUpper", itself with one child indicating "Fail - Error Message"

        1. expected.png
          expected.png
          13 kB
        2. actual-1.png
          actual-1.png
          14 kB
        For Gerrit Dashboard: QTCREATORBUG-25877
        # Subject Branch Project Status CR V

            cstenger Christian Stenger
            philemong Philémon Giraud
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes