AutoTest: Fix expansion of results

When using "Expand All" before running tests we may miss
the results due to filtering that has not been applied
correctly.

Fixes: QTCREATORBUG-25877
Change-Id: Ibe6af43ff28e31c7acfd78ba3ec1daf9db620b56
Reviewed-by: David Schulz <david.schulz@qt.io>