src/plugins/autotest/testresultspane.cpp
@@ -250,6 +250,7 @@ void TestResultsPane::addTestResult(const TestResultPtr &result)
     m_atEnd = scrollBar ? scrollBar->value() == scrollBar->maximum() : true;
 
     m_model->addTestResult(result, m_expandCollapse->isChecked());
+    m_filterModel->invalidate();
     setIconBadgeNumber(m_model->resultTypeCount(ResultType::Fail)
                        + m_model->resultTypeCount(ResultType::MessageFatal)
                        + m_model->resultTypeCount(ResultType::UnexpectedPass));
